add services --localization

--- a/src/services/i18n/locales/ru.json
+++ b/src/services/i18n/locales/ru.json
@@ -55,6 +55,7 @@
   "settings": "Настройки",
   "attention": "Внимание! Изменение этих параметров может повлиять на работу приложения!",
   "debugMode": "РЕЖИМ ОТЛАДКИ",
+  "cash": "Баланс",
   "modal": {
     "create": "Создал(а)",
     "createDate": "Дата создания",
