--- a/src/services/i18n/locales/uk.json
+++ b/src/services/i18n/locales/uk.json
@@ -55,6 +55,7 @@
   "settings": "Налаштування",
   "attention": "Увага! Зміна цих параметрів може вплинути на роботу програми!",
   "debugMode": "РЕЖИМ НАЛАГОДЖЕННЯ",
+  "cash": "Баланс",
   "modal": {
     "create": "Створив(ла)",
     "createDate": "Дата створення",
